--- a/index.html
+++ b/index.html
@@ -498,8 +498,8 @@
 
     <div class="backdrop">
       <div class="modal">
-        <button class="modal__close">
-          <svg class="modal__icon" width="24" height="24">
+        <button class="modal__close" type="button">
+          <svg class="modal__icon" width="8" height="8">
             <use href="./images/icons2.svg#close"></use>
           </svg>
         </button>
