--- a/index.html
+++ b/index.html
@@ -503,37 +503,45 @@
             <use href="./images/icons2.svg#close"></use>
           </svg>
         </button>
-        <h2 class="modal__title">
+        <p class="modal__title">
           Leave your contacts and we will call you back
-        </h2>
+        </p>
         <form class="modal__form">
-          <label class="modal__label">
-            Name
-            <span class="modal__input-wrapper">
-              <svg class="modal__icon" width="20" height="20">
+          <div class="modal-form__name">
+            <label class="modal__label" for="user-name"> Name </label>
+            <div class="modal__input-wrapper">
+              <input
+                type="text"
+                name="name"
+                placeholder="Your name"
+                id="user-name"
+                class="name-input"
+                required
+              />
+              <svg class="modal__icon" width="18" height="24">
                 <use href="./images/icons2.svg#Frame 1"></use>
               </svg>
-              <input type="text" name="name" placeholder="Your name" required />
-            </span>
-          </label>
-          <label class="modal__label">
-            Phone
-            <span class="modal__input-wrapper">
-              <svg class="modal__icon" width="18" height="18">
+            </div>
+          </div>
+          <div class="modal-form__name">
+            <label class="modal__label"> Phone </label>
+            <div class="modal__input-wrapper">
+              <svg class="modal__icon" width="18" height="24">
                 <use href="./images/icons2.svg#phone-black-18dp 1"></use>
               </svg>
               <input
                 type="tel"
                 name="phone"
                 placeholder="Your phone"
+                class="name-input"
                 required
               />
-            </span>
-          </label>
-          <label class="modal__label">
-            Email
-            <span class="modal__input-wrapper">
-              <svg class="modal__icon" width="18" height="18">
+            </div>
+          </div>
+          <div class="modal-form__name">
+            <label class="modal__label"> Email </label>
+            <div class="modal__input-wrapper">
+              <svg class="modal__icon" width="18" height="24">
                 <use href="./images/icons2.svg#email-black-18dp 1"></use>
               </svg>
               <input
@@ -542,8 +550,8 @@
                 placeholder="Your email"
                 required
               />
-            </span>
-          </label>
+            </div>
+          </div>
           <label class="modal__label">
             Comment
             <textarea name="comment" placeholder="Text input"></textarea>
