--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
             <div class="modal__input-wrapper">
               <input
                 type="text"
-                name="name"
+                name="user-name"
                 placeholder="Your name"
                 id="user-name"
                 class="name-input"
@@ -526,9 +526,6 @@
           <div class="modal-form__name">
             <label class="modal__label"> Phone </label>
             <div class="modal__input-wrapper">
-              <svg class="modal__icon" width="18" height="24">
-                <use href="./images/icons2.svg#phone-black-18dp 1"></use>
-              </svg>
               <input
                 type="tel"
                 name="phone"
@@ -536,32 +533,49 @@
                 class="name-input"
                 required
               />
+              <svg class="modal__icon" width="18" height="24">
+                <use href="./images/icons2.svg#phone-black-18dp 1"></use>
+              </svg>
             </div>
           </div>
           <div class="modal-form__name">
             <label class="modal__label"> Email </label>
             <div class="modal__input-wrapper">
-              <svg class="modal__icon" width="18" height="24">
-                <use href="./images/icons2.svg#email-black-18dp 1"></use>
-              </svg>
               <input
                 type="email"
                 name="email"
                 placeholder="Your email"
                 required
               />
+              <svg class="modal__icon" width="18" height="24">
+                <use href="./images/icons2.svg#email-black-18dp 1"></use>
+              </svg>
             </div>
           </div>
-          <label class="modal__label">
-            Comment
-            <textarea name="comment" placeholder="Text input"></textarea>
-          </label>
-          <label class="modal__checkbox">
-            <input type="checkbox" name="terms" required />
-            <span class="custom-checkbox"></span>
-            I accept the terms and conditions of the
-            <a href="#" class="link">Privacy Policy</a>
-          </label>
+          <div class="textrea-content">
+            <label class="modal__label" for="user-comment"> Comment </label>
+            <textarea
+              name="user-comment"
+              placeholder="Text input"
+              id="user-comment"
+              class="textarea"
+            ></textarea>
+          </div>
+          <div class="checkbox-content">
+            <input
+              type="checkbox"
+              name="user-privacy"
+              id="user-privacy"
+              value="true"
+              class="checkbox visually-hidden"
+              required
+            />
+            <label class="modal__checkbox" for="user-privacy">
+              <span class="custom-checkbox"></span>
+              I accept the terms and conditions of the
+              <a href="#" class="link">Privacy Policy</a>
+            </label>
+          </div>
           <button type="submit" class="modal__submit">Send</button>
         </form>
       </div>
