--- a/index.html
+++ b/index.html
@@ -524,13 +524,13 @@
             </div>
           </div>
           <div class="modal-form__name">
-            <label class="modal__label" for="user-name"> Phone </label>
+            <label class="modal__label" for="user-phont"> Phone </label>
             <div class="modal__input-wrapper">
               <input
-                type="tel"
-                name="phone"
-                placeholder="Your phone"
-                id="user-name"
+                type="text"
+                name="user-name"
+                placeholder="Your name"
+                id="user-phone"
                 class="name-input"
                 required
               />
@@ -540,13 +540,14 @@
             </div>
           </div>
           <div class="modal-form__name">
-            <label class="modal__label" for="user-name"> Email </label>
+            <label class="modal__label" for="user-email"> Email </label>
             <div class="modal__input-wrapper">
               <input
-                type="email"
-                name="email"
+                type="text"
+                name="user-email"
+                placeholder="Your name"
                 id="user-name"
-                placeholder="Your email"
+                class="name-input"
                 required
               />
               <svg class="modal__icon" width="18" height="24">
