--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
             </div>
           </div>
           <div class="modal-form__name">
-            <label class="modal__label" for="user-phont"> Phone </label>
+            <label class="modal__label" for="user-phone"> Phone </label>
             <div class="modal__input-wrapper">
               <input
                 type="text"
@@ -546,7 +546,7 @@
                 type="text"
                 name="user-email"
                 placeholder="Your name"
-                id="user-name"
+                id="user-email"
                 class="name-input"
                 required
               />
